--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
           <h4>Paw-mail Us</h4>
           <ul class="footer__links">
             <li><a href="tel:0987654321">0987654321 (We speak Woof & Meow!)</a></li>
-            <li><a href="mailto:woof@petpalace.com">woof@petpalace.com</a></li>
+            <li><a href="mailto:codegnerdev@gmail.com">codegnerdev@gmail.com</a></li>
           </ul>
         </div>
         <div class="footer__col">
@@ -380,7 +380,7 @@
         </div>
       </div>
       <div class="footer__bar">
-        Copyright © 2024 Pet Palace. All rights reserved. No cats were herded in the making of this website.
+        Copyright © 2024 Codegner. All rights reserved. No cats were herded in the making of this website.
       </div>
     </footer>
 
